--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#">Home</a><br><br>
             <a href="menu.html">Our Menu</a><br><br>
             <a href="#">Entertainment Schedule</a><br><br>
-            <a href="#">Reservations</a><br><br>
+            <a href="#">Reservations</a>
 
             <div id="address">
                 The Lighthouse Bistro <br> #27 Lighthouse Road <br> Mackinac City, Michigan 49701 <br><br> 888-555-5555 <br><br>
