--- a/menu.html
+++ b/menu.html
@@ -14,10 +14,10 @@
             <h1>The Lighthouse Bistro</h1>
         </header>
         <nav>
-            <a href="index.html">Home</a> &nbsp;
-            <a href="#">Our Menu</a> &nbsp;
-            <a href="#">Entertainment Schedule</a> &nbsp;
-            <a href="#">Reservations</a>
+            <a href="index.html">Home</a><br><br>
+            <a href="#">Our Menu</a><br><br>
+            <a href="#">Entertainment Schedule</a><br><br>
+            <a href="#">Reservations</a><br><br>
         </nav>
         <div class="divider"></div>
         <main>
