Made main and nav-var display as table-cells to create columns

--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="divider"></div>
         <main>
-            <img src="images/coffee.jpg" alt="Coffee" class="pictures">
+            <img src="/images/coffee1.jpg" alt="Coffee" class="pictures">
             <p class="menu_offerings">Coffees</p>
             <dl>
                 <dt>Just Java</dt>
@@ -38,7 +38,7 @@
                 <dd>Single $5.00 &nbsp;&nbsp; Double $7.50</dd>
             </dl>
 
-            <img src="images/tea.jpg" alt="Tea" class="pictures">
+            <img src="/images/tea1.jpg" alt="Tea" class="pictures">
             <p class="menu_offerings">Teas</p>
             <dl>
                 <dt>Breakfast Teas</dt>
