--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>The Lighthouse Bistro</h1>
         </header>
-        <nav>
+        <nav class="nav-var">
             <a href="#">Home</a><br><br>
             <a href="menu.html">Our Menu</a><br><br>
             <a href="#">Entertainment Schedule</a><br><br>
@@ -22,11 +22,8 @@
             <div id="address">
                 The Lighthouse Bistro <br> #27 Lighthouse Road <br> Mackinac City, Michigan 49701 <br><br> 888-555-5555 <br><br>
             </div>
-
         </nav>
-
-
-        <main>
+        <main class="main">
             <h3>Enjoy Fine Dining and Entertainment at Lighthouse Point</h3>
             <img src="images/oldmackinaclight.jpg" alt="Mackinac Light" id="light">
             <p>The Lighthouse Bistro offers fine dining and entertainment a stones throw from the Old Mackinac Point Lighthouse on the Straights of Mackinac. The lighthouse was built in 1892 as a sentinel for vessels entering the straights of Mackinac. Open year round. Yes, even in the winter! Stop in for a mug of one of our specialty coffees after your hike.</p>
