--- a/menu.html
+++ b/menu.html
@@ -13,58 +13,104 @@
         <header>
             <h1>The Lighthouse Bistro</h1>
         </header>
-        <nav>
+        <nav class="nav-var">
             <a href="index.html">Home</a><br><br>
             <a href="#">Our Menu</a><br><br>
             <a href="#">Entertainment Schedule</a><br><br>
             <a href="#">Reservations</a><br><br>
+
+            <div id="address">
+                The Lighthouse Bistro <br> #27 Lighthouse Road <br> Mackinac City, Michigan 49701 <br><br> 888-555-5555 <br><br>
+            </div>
         </nav>
-        <div class="divider"></div>
-        <main>
-            <img src="/images/coffee1.jpg" alt="Coffee" class="pictures">
-            <p class="menu_offerings">Coffees</p>
-            <dl>
-                <dt>Just Java</dt>
-                <dd>Regular house blend, decaffeinated coffee, or flavor of the day</dd>
-                <dd>Endless Cup $2.00</dd>
-                <dt>Cafe au Lait</dt>
-                <dd>House blended coffee infused into a smooth, steamed milk</dd>
-                <dd>Single $2.00 &nbsp;&nbsp; Double $3.00</dd>
-                <dt>Iced Cappuccino</dt>
-                <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass</dd>
-                <dd>Single $4.75 &nbsp;&nbsp; Double $5.75 &nbsp;&nbsp; Wow! $7.75</dd>
-                <dt>Espresso</dt>
-                <dd>Our house blend espresso - the best!</dd>
-                <dd>Single $5.00 &nbsp;&nbsp; Double $7.50</dd>
-            </dl>
-
-            <img src="/images/tea1.jpg" alt="Tea" class="pictures">
-            <p class="menu_offerings">Teas</p>
-            <dl>
-                <dt>Breakfast Teas</dt>
-                <dd>Darjeeling, English Breakfast, Queen Anne, Green Tea with Lemon</dd>
-                <dd>Endless Cup $2.00</dd>
-                <dt>Afternoon Teas</dt>
-                <dd>Lemon, Pure Peppermint, Earl Grey, China Oolong</dd>
-                <dd>Endless Cup $3.00</dd>
-                <dt>Exotic Teas</dt>
-                <dd>Orange & Cinnammon Spice, Camomile, Honey & Vanilla, Pomegranate & Raspberry</dd>
-                <dd>One Cup $3.50</dd>
-            </dl>
-
-            <img src="images/clamstrips.png" alt="Snacks" class="pictures">
-            <p class="menu_offerings">Snacks</p>
-            <dl>
-                <dt>Bagels and Muffins</dt>
-                <dd>Bagels, Plain Muffins, Blueberry Muffins, Chcolate Muffins, and much more</dd>
-                <dd>Small $2.50 &nbsp;&nbsp; Large $3.00</dd>
-                <dt>Organic Snack</dt>
-                <dd>Organic chips with sea salt, Organic salads</dd>
-                <dd>Pices vary</dd>
-                <dt>Fresh Fish</dt>
-                <dd>Clam Strips, Fried Fish Strip, Fried Oysters, and many more seasonal selections</dd>
-                <dd>Prices Vary by Season $5.75-$15.00</dd>
-            </dl>
+        <main class="main">
+            <table>
+                <caption>Some of Our Coffees</caption>
+                <tr>
+                    <th scope="col">Coffee</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Image</th>
+                </tr>
+                <tr>
+                    <td>Just Java</td>
+                    <td>The regular house blend, decaffienated coffee, or the flavor of the day</td>
+                    <td>Endless cup &nbsp; $2.00</td>
+                    <td><img src="/images/coffee1.jpg" alt="Just Java"></td>
+                </tr>
+                <tr>
+                    <td>Cafe au Lait</td>
+                    <td>House blended coffee infused into a smooth steamed milk</td>
+                    <td>Single $2.00 &nbsp; Double $3.00</td>
+                    <td><img src="/images/coffee2.jpg" alt="Cafe au Lait"></td>
+                </tr>
+                <tr>
+                    <td>Iced Cappuccino</td>
+                    <td>Sweetened espresso blended wtih icy-cold milk and served in a chilled glass</td>
+                    <td>Single $4.75 &nbsp; Double $5.75 &nbsp; Wow! $7.75</td>
+                    <td><img src="/images/coffee3.jpg" alt="Iced Cappuccino"></td>
+                </tr>
+                <tr>
+                    <td>Espresso</td>
+                    <td>Our house blend espresso - the best!</td>
+                    <td>Single $5.00 &nbsp; Double $7.50</td>
+                    <td><img src="/images/espresso1.png" alt="Espresso"></td>
+                </tr>
+            </table>
+            <table>
+                <caption>A Selection of Our Teas</caption>
+                <tr>
+                    <th scope="col">Tea</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Image</th>
+                </tr>
+                <tr>
+                    <td>Breakfast Teas</td>
+                    <td>Darjeeling, English Breakfast, Queen Anne, Green tea with lemon</td>
+                    <td>Endless Cup $2.00</td>
+                    <td><img src="/images/tea1.jpg" alt="Breakfast Teas"></td>
+                </tr>
+                <tr>
+                    <td>Afternoon Teas</td>
+                    <td>Lemon, Pure Peppermint, Earl Grey, China Oolong</td>
+                    <td>Endless Cup $3.00</td>
+                    <td><img src="/images/tea2.jpg" alt="Afternoon Teas"></td>
+                </tr>
+                <tr>
+                    <td>Exotic Teas</td>
+                    <td>Orange &amp; Cinnammon Spice, Camomile, Honey &amp; Vanilla, Pomegranate &amp; Raspberry</td>
+                    <td>Single Cup $3.50</td>
+                    <td><img src="/images/tea3.jpg" alt="Exotic Teas"></td>
+                </tr>
+            </table>
+            <table>
+                <caption>Snacks</caption>
+                <tr>
+                    <th scope="col">Snack</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Image</th>
+                </tr>
+                <tr>
+                    <td>Bagels and Muffins</td>
+                    <td>Bagels, Plain Muffins, Blueberry Muffins, Chocolate Muffins, and much more</td>
+                    <td>Small $2.50 &nbsp; Large $3.00</td>
+                    <td><img src="/images/muffin1.jpg" alt="Bagels and Muffnis"></td>
+                </tr>
+                <tr>
+                    <td>Organic Snacks</td>
+                    <td>Organic chips with sea salt, Organic salads</td>
+                    <td>Prices vary</td>
+                    <td><img src="/images/salad1.jpg" alt="Organic"></td>
+                </tr>
+                <tr>
+                    <td>Fresh Fish</td>
+                    <td>Clam Strips, Fried Fish Strips, Fried Oysters, and many other seasonal selections</td>
+                    <td>Prices vary by season $5.75 - $15.00</td>
+                    <td><img src="/images/clamstrips.png" alt="Fish"></td>
+                </tr>
+            </table>
         </main>
         <footer>
             Copyright &copy; 2018 The Lighthouse Bistro
