Added padding to nav to give some space between elements and text-aligned necessary text

--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
                 <tr>
                     <td>Just Java</td>
                     <td>The regular house blend, decaffienated coffee, or the flavor of the day</td>
-                    <td>Endless cup &nbsp; $2.00</td>
+                    <td>Endless cup $2.00</td>
                     <td><img src="/images/coffee1.jpg" alt="Just Java"></td>
                 </tr>
                 <tr>
@@ -47,7 +47,7 @@
                 <tr>
                     <td>Iced Cappuccino</td>
                     <td>Sweetened espresso blended wtih icy-cold milk and served in a chilled glass</td>
-                    <td>Single $4.75 &nbsp; Double $5.75 &nbsp; Wow! $7.75</td>
+                    <td>Single $4.75 &nbsp; Double $5.75 Wow! $7.75</td>
                     <td><img src="/images/coffee3.jpg" alt="Iced Cappuccino"></td>
                 </tr>
                 <tr>
@@ -57,6 +57,7 @@
                     <td><img src="/images/espresso1.png" alt="Espresso"></td>
                 </tr>
             </table>
+            <br>
             <table>
                 <caption>A Selection of Our Teas</caption>
                 <tr>
@@ -84,6 +85,7 @@
                     <td><img src="/images/tea3.jpg" alt="Exotic Teas"></td>
                 </tr>
             </table>
+            <br>
             <table>
                 <caption>Snacks</caption>
                 <tr>
