Added Project 5 changes

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
             <h1>The Lighthouse Bistro</h1>
         </header>
         <nav class="nav-var">
-            <a href="#">Home</a><br><br>
-            <a href="menu.html">Our Menu</a><br><br>
-            <a href="#">Entertainment Schedule</a><br><br>
-            <a href="#">Reservations</a>
-
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Our Menu</a></li>
+                <li><a href="#">Entertainment Schedule</a></li>
+                <li><a href="#">Reservations</a></li>
+            </ul>
             <div id="address">
-                The Lighthouse Bistro <br> #27 Lighthouse Road <br> Mackinac City, Michigan 49701 <br><br> 888-555-5555 <br><br>
+                The Lighthouse Bistro <br> #27 Lighthouse Road <br> Mackinac City, Michigan 49701 <br><br><a href="tel:888-555-5555" id="mobileNumber">888-555-5555</a><span id="number">888-555-5555</span> <br><br>
             </div>
         </nav>
         <main class="main">
