--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Our Menu</a></li>
-                <li><a href="#">Entertainment Schedule</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="entertainment.html">Entertainment Schedule</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
             </ul>
             <div id="address">
                 The Lighthouse Bistro <br> #27 Lighthouse Road <br> Mackinac City, Michigan 49701 <br><br><a href="tel:888-555-5555" id="mobileNumber">888-555-5555</a><span id="number">888-555-5555</span> <br><br>
@@ -40,6 +40,8 @@
             Copyright &copy; 2018 The Lighthouse Bistro
             <br>
             <a href="mailto:nick@conklin.com">nick@conklin.com</a>
+            <br>
+            <p>Today is: <span id="today"><script src="js/date.js"></script></span></p>
         </footer>
     </div>
 </body>
