--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bistro.css">
     <link rel="icon" href="images/favicon.ico">
     <title>The Lighthouse Bistro Menu</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -17,18 +18,18 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Our Menu</a></li>
-                <li><a href="#">Entertainment Schedule</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="entertainment.html">Entertainment Schedule</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
             </ul>
             <div id="address">
                 The Lighthouse Bistro <br> #27 Lighthouse Road <br> Mackinac City, Michigan 49701 <br><br><a href="tel:888-555-5555" id="mobileNumber">888-555-5555</a><span id="number">888-555-5555</span>
             </div>
         </nav>
         <main class="main">
+            <h2 class="heading">Our Coffee</h2>
+            <p class="text">Our coffees are well-known throughout the region as bold an flavorful. We offer many different types of coffees, one of which is sure to satisfy your taste. Prices start at $2.00 per cup</p>
             <table>
                 <caption>Our Coffee</caption>
-                <h2 class="heading">Our Coffee</h2>
-                <p class="text">Our coffees are well-known throughout the region as bold an flavorful.  We offer many different types of coffees, one of which is sure to satisfy your taste.  Prices start at $2.00 per cup</p>
                 <tr>
                     <th scope="col">Coffee</th>
                     <th scope="col">Description</th>
@@ -61,10 +62,10 @@
                 </tr>
             </table>
             <br>
+            <h2 class="heading">Our Tea</h2>
+            <p class="text">Our teas are hand-selected from around the world to bring you a wide variety of possibilities. We specialize in flavorful afternoon teas as well as a wide assortment of exotic teas. Stop in and try a cup! Prices start at $2.00</p>
             <table>
                 <caption>Our Tea</caption>
-                <h2 class="heading">Our Tea</h2>
-                <p class="text">Our teas are hand-selected from around the world to bring you a wide variety of possibilities.  We specialize in flavorful afternoon teas as well as a wide assortment of exotic teas.  Stop in and try a cup!  Prices start at $2.00</p>
                 <tr>
                     <th scope="col">Tea</th>
                     <th scope="col">Description</th>
@@ -91,10 +92,10 @@
                 </tr>
             </table>
             <br>
+            <h2 class="heading">Our Snacks</h2>
+            <p class="text">We offer a wide variety of foods ranging from simple snacks to complete inners. Our specialties are organic salads and fresh seafood. Try our fried clam strips and fish strips. The locals swear these are the best you'll find anywhere. Prices are seasonal, but always a real deal.</p>
             <table>
                 <caption>Our Snacks</caption>
-                <h2 class="heading">Our Snacks</h2>
-                <p class="text">We offer a wide variety of foods ranging from simple snacks to complete inners. Our specialties are organic salads and fresh seafood. Try our fried clam strips and fish strips. The locals swear these are the best you'll find anywhere. Prices are seasonal, but always a real deal.</p>
                 <tr>
                     <th scope="col">Snack</th>
                     <th scope="col">Description</th>
@@ -125,8 +126,11 @@
             Copyright &copy; 2018 The Lighthouse Bistro
             <br>
             <a href="mailto:nick@conklin.com">nick@conklin.com</a>
+            <br>
+            <p>Today is: <span id="today"><script src="js/date.js"></script></span></p>
         </footer>
     </div>
+    <script src="js/style.js"></script>
 </body>
 
 </html>
